2014-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Don't open syslog connection until after we have
	forked and closed old descriptors .. fix for bug #41751

2014-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	When generating document with a header containing adjacent non-ascii
	words which need to be encoded, omit the space between those words
	for consistency with the change on Fe 3rd.

2014-02-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDateFormatter.m
	(-initWithDateFormat:allowNaturalLanguage:):
	Use method -setDateFormat: to get correct behaviour.
	* Source/NSDateFormatter.m (-setDateFormat:):
	Use ASSIGNCOPY for _dateFormat.

2014-02-14  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSNotification.h
	* Source/NSNotificationCenter.m
	(-addObserverForName:selector:queue:usingBlock:):
	Added new Mac OS X 10.6 method.

2014-02-14  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSSortDescriptor.h
	* Source/Foundation/NSSortDescriptor.m
	(+sortDescriptorWithKey:ascending:selector:,
	+sortDescriptorWithKey:ascending,
	-[NSSet sortedArrayUsingDescriptors:]): Added missing Mac OS X 10.6
	methods.

2014-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Fix to cope with cases where a format specifies
	a field width larger than can reasonably fit on the strack ... use
	the heap.

2014-02-13  Larry Campbell <lcampbel@akamai.com>

	* Source/NSCalendarDate.m: Fixup millisecond formatting to match OSX

2014-02-12  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/gsdoc-1_0_4.dtd: Added new DTD version that declares 'package'
	visibility as a valid ivar qualifier.
	* Tools/AGSParser.m: Added 'package' visibility parsing.
	* Tools/AGSOutput.m:
	* Tools/autogsdoc.m:
	* Tools/GNUmakefile.m:
	Updated to refer to the latest DTD version.

2014-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix standardising a path to use unix separators